feat: config api | axios

--- a/src/app/containers/Cart/cart.module.css
+++ b/src/app/containers/Cart/cart.module.css
@@ -10,9 +10,13 @@
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   position: absolute;
   height: 100%;
   width: 100%;
 
-  background-color: #f6f5fa;
+  background: #f6f5fa;
 }
