feat: implement redux

--- a/src/app/shared/styles/common.module.css
+++ b/src/app/shared/styles/common.module.css
@@ -2,6 +2,10 @@
   /* 56px is the height of the navigation bar */
   padding-top: 56px;
 }
+.skipNavigationBottom {
+  /* 56px is the height of the navigation bottom*/
+  padding-bottom: 56px;
+}
 
 .grayBackground {
   background: #eef1f8;
