--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,9 @@
   --color-white: #ffffff;
   --color-orange: #fc820a;
   --color-red: #ff424f;
+  --color-yellow: #ffc400;
   --color-gray-20: #ebebf0;
+  --color-gray-40: #c4c4cf;
 
   --font-sans: 'Inter', sans-serif;
   --font-weight-normal: 400;
