--- a/src/app/containers/Home/home.module.css
+++ b/src/app/containers/Home/home.module.css
@@ -1,11 +1,3 @@
 .container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  position: absolute;
-  height: 100%;
-  width: 100%;
-
-  background: #f6f5fa; */
+  background-color: rgb(251, 244, 244);
 }
