--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,7 @@
 
   --font-sans: 'Inter', sans-serif;
   --font-weight-normal: 400;
+  --font-weight-medium: 500;
   --font-weight-bold: 700;
 }
 
