--- a/src/app/components/ProductCardHorizontal/productCard.module.css
+++ b/src/app/components/ProductCardHorizontal/productCard.module.css
@@ -1,20 +1,22 @@
 .cardContainer {
+  display: flex;
   background-color: var(--color-white);
-  width: 160px;
-  height: 300px;
+  width: 328px;
+  height: 176px;
   border-radius: 4px;
 }
 
 .thumbnail {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 160px;
-  height: 160px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  height: 100%;
+  padding: 8px 0px 8px 8px;
 }
 
 .content {
-  padding: 8px;
-  padding-top: 4px;
+  padding: 8px 8px 8px 16px;
 }
 
 .name {
