--- a/src/app/containers/Home/components/FlashSale/uniqueSale.module.css
+++ b/src/app/containers/Home/components/FlashSale/uniqueSale.module.css
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px 16px;
+  padding: 16px 0px;
+}
+
+.imageHeader {
+  width: 100%;
+  margin-bottom: 16px;
 }
 
 .listBook {
@@ -10,5 +15,5 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 8px;
-  margin: 16px 0px;
+  margin: 0px 16px;
 }
