feat: finish UI and update Readme.md

--- a/src/app/containers/Cart/ProductItem/ButtonAction/buttonAction.module.css
+++ b/src/app/containers/Cart/ProductItem/ButtonAction/buttonAction.module.css
@@ -20,11 +20,7 @@
   cursor: pointer;
 }
 
-.active > img {
-  filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
-}
-
-.disable {
+.inactive {
   border: 1px solid #ededef;
   color: #ededef;
 }
